[package]
name = "browserflare"
version = "0.4.0"
edition = "2021"
description = "Rust client for Cloudflare Browser Rendering APIs"
license = "MIT"
keywords = ["cloudflare", "browser-rendering", "web-scraping",]
categories = ["api-bindings", "web-programming"]
repository = "https://github.com/harish-garg/browserflare-rust"
homepage = "https://browserflare.xyz/"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
regex = "1"
dotenvy = "0.15"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
